--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <meta property="og:title" content="Framestate | Real Estate Photo Editing" />
     <meta property="og:description" content="Transform your property listings with professional photo editing. Start your free trial today." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:image" content="/logobg.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Framestate" />
     <meta name="twitter:description" content="Premium real estate photo editing services." />
-    <meta name="twitter:image" content="/og-image.jpg" />
+    <meta name="twitter:image" content="/logobg.jpg" />
   </head>
 
   <body>
